--- a/core/pos/templates/product/create.html
+++ b/core/pos/templates/product/create.html
@@ -1,5 +1,7 @@
 {% extends 'form.html' %}
 {% load static %}
+{% load pos_extras %}
+{% load widget_tweaks %}
 {% block assets_form %}
     <script src="{% static 'lib/select2-4.0.13/js/select2.min.js' %}"></script>
     <script src="{% static 'lib/select2-4.0.13/js/i18n/es.js' %}"></script>
@@ -8,4 +10,48 @@
     <link rel="stylesheet" href="{% static 'lib/bootstrap-touchspin-4.2.5/css/jquery.bootstrap-touchspin.css' %}"/>
     <script src="{% static 'lib/bootstrap-touchspin-4.2.5/js/jquery.bootstrap-touchspin.js' %}"></script>
     <script src="{% static 'product/js/form.js' %}"></script>
+    <script type="application/javascript">
+        product.prices = {{ prices|safe }};
+        $(function () {
+            product.listPrices();
+        });
+    </script>
+{% endblock %}
+
+{% block form_fields %}
+    {% for field in form.visible_fields %}
+        <div class="form-group">
+            <label>{{ field.label }}:</label>
+            {% if field.field.widget.input_type == 'checkbox' %}
+                <br>{{ field }}
+            {% else %}
+                {{ field|add_class:'form-control' }}
+            {% endif %}
+        </div>
+    {% endfor %}
+    <hr>
+    <h4 class="font-weight-bold pb-0">Precios para venta</h4>
+    <table style="width:100%;" class="table table-bordered table-sm" id="tblPrices">
+        <thead>
+        <tr>
+            <th style="width: 30%;">Eliminar</th>
+            <th style="width: 35%;">A partir de</th>
+            <th style="width: 35%;">Precio con iva</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+{% endblock %}
+
+{% block buttons %}
+    <button type="submit" class="btn btn-primary btn-flat">
+        <i class="fas fa-save"></i> Guardar registro
+    </button>
+    <button type="button" class="btn btn-success btn-flat btnCreatePrice">
+        <i class="fas fa-hand-holding-usd"></i> Crear precio
+    </button>
+    <a href="{{ list_url }}" class="btn btn-danger btn-flat">
+        <i class="fas fa-times"></i> Cancelar
+    </a>
 {% endblock %}
