--- a/core/pos/templates/sale/admin/create.html
+++ b/core/pos/templates/sale/admin/create.html
@@ -104,7 +104,7 @@
                         <th style="width: 20%;">Producto</th>
                         <th style="width: 5%;">Stock</th>
                         <th style="width: 15%;">Cantidad</th>
-                        <th style="width: 15%;">Unidad</th>
+                        <th style="width: 15%;">Precio</th>
                         <th style="width: 15%;">Desc</th>
                         <th style="width: 15%;">Total</th>
                     </tr>
@@ -308,10 +308,11 @@
         sale.detail.iva = {{ company.iva|safe }};
         $(function () {
             sale.listProducts();
-            {% if final_consumer %}
+            var customer = {{ final_consumer|safe }};
+            if (!$.isEmptyObject(customer)) {
                 select_client.select2('trigger', 'select', {data: {{ final_consumer|safe }}});
                 select_receipt.trigger('change');
-            {% endif %}
+            }
         });
     </script>
 {% endblock %}
