update files app

--- a/core/pos/templates/product/list.html
+++ b/core/pos/templates/product/list.html
@@ -14,10 +14,9 @@
     <th>Id</th>
     <th>Nombre</th>
     <th>Código</th>
-    <th>Categoría</th>
     <th>Inventariado</th>
-    <th>Imagen</th>
-    <th>Código de barra</th>
+    <th>Fecha de expiración</th>
+    <th>Días de expirar</th>
     <th>P./Compra</th>
     <th>P./Venta</th>
     <th>P./Promoción</th>
