--- a/core/pos/templates/purchase/create.html
+++ b/core/pos/templates/purchase/create.html
@@ -90,7 +90,8 @@
                 <tr>
                     <th style="width: 5%;">Eliminar</th>
                     <th style="width: 10%;">Código</th>
-                    <th style="width: 40%;">Producto</th>
+                    <th style="width: 20%;">Producto</th>
+                    <th style="width: 20%;">Fecha de caducidad</th>
                     <th style="width: 20%;">Cantidad</th>
                     <th style="width: 15%;">P./Unitario</th>
                     <th style="width: 10%;">Subtotal</th>
