--- a/core/pos/templates/product/list.html
+++ b/core/pos/templates/product/list.html
@@ -65,11 +65,11 @@
         </form>
     </div>
     <div class="modal fade" id="myModalInventory" tabindex="-2" role="dialog" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">
-                        <i class="fas fa-upload"></i> Inventario de Productos
+                    <h5 class="modal-title font-weight-bold">
+                        <i class="fas fa-calendar-check"></i> Inventario de Productos
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
-                        <table style="width:100%;" class="table table-bordered" id="tblInventory">
+                        <table style="width:100%;" class="table table-bordered table-sm" id="tblInventory">
                             <thead>
                             <tr>
                                 <th style="width: 20%;">Fecha de registro</th>
