--- a/core/pos/templates/product/stock_adjustment.html
+++ b/core/pos/templates/product/stock_adjustment.html
@@ -38,11 +38,13 @@
     <table style="width:100%;" class="table table-bordered" id="tblProducts">
         <thead>
         <tr>
-            <th style="width: 10%;">Eliminar</th>
-            <th style="width: 15%;">Código</th>
-            <th style="width: 40%;">Producto</th>
-            <th style="width: 15%;">Stock actual</th>
-            <th style="width: 20%;">Stock nuevo</th>
+            <th style="width: 5%;">Eliminar</th>
+            <th style="width: 15%;">Fecha de inventario</th>
+            <th style="width: 20%;">Producto</th>
+            <th style="width: 15%;">Fecha de caducidad</th>
+            <th style="width: 15%;">Stock inicial</th>
+            <th style="width: 15%;">Saldo actual</th>
+            <th style="width: 15%;">Saldo nuevo</th>
         </tr>
         </thead>
         <tbody></tbody>
@@ -63,10 +65,12 @@
                         <table style="width:100%;" class="table table-bordered table-sm" id="tblSearchProducts">
                             <thead>
                             <tr>
-                                <th style="width: 10%;">Código</th>
-                                <th style="width: 40%;">Nombre</th>
-                                <th style="width: 25%;">Stock</th>
-                                <th style="width: 25%;">Agregar</th>
+                                <th style="width: 15%;">Fecha de inventario</th>
+                                <th style="width: 25%;">Producto</th>
+                                <th style="width: 15%;">Fecha de caducidad</th>
+                                <th style="width: 15%;">Stock inicial</th>
+                                <th style="width: 15%;">Saldo actual</th>
+                                <th style="width: 15%;">Agregar</th>
                             </tr>
                             </thead>
                             <tbody>
