--- a/core/pos/templates/product/list.html
+++ b/core/pos/templates/product/list.html
@@ -34,7 +34,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">
+                        <h5 class="modal-title font-weight-bold">
                             <i class="fas fa-upload"></i> Subir Productos
                         </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
